第三方登录

--- a/user/templates/register.html
+++ b/user/templates/register.html
@@ -52,9 +52,9 @@
         <label class="col-sm-2 control-label">性别</label>
         <div class="col-sm-5">
             <select name="sex">
-                <option value="M">男</option>
-                <option value="F">女</option>
-                <option value="S">保密</option>
+                <option value="男性">男</option>
+                <option value="女性">女</option>
+                <option value="保密">保密</option>
             </select>
         </div>
     </div>
