中间件限制访问

--- a/post/templates/search.html
+++ b/post/templates/search.html
@@ -8,7 +8,7 @@
             <strong>{{post.title}}</strong>
         </a>
         {% empty %}
-        <div>换个搜索词试试。</div>
+        <div>换个搜索词试试</div>
         {% endfor %}
     </div>
 {% endblock %}
